2007-11-25  Philip Withnall  <pwithnall@svn.gnome.org>

	* data/totem.desktop.in.in.in: Add some extra keys, pointing to the
	documentation, and listing other binaries for automated crash
	reporting.

2007-11-25  Philip Withnall  <pwithnall@svn.gnome.org>

	* README: Fix some capitalisation issues in the readme.

2007-11-25  Philip Withnall  <pwithnall@svn.gnome.org>

	Update svn:ignore properties.

2007-11-25  Philip Withnall  <pwithnall@svn.gnome.org>

	* bindings/python/totem.defs:
	* src/plugins/mythtv/totem-mythtv.c: (create_treeview):
	* src/plugins/tracker/totem-tracker-widget.c:
	(initialize_list_store):
	* src/plugins/youtube/youtube.py:
	* src/totem-cell-renderer-video.c: (totem_cell_renderer_video_new),
	(totem_cell_renderer_video_class_init),
	(totem_cell_renderer_video_init),
	(totem_cell_renderer_video_set_property),
	(totem_cell_renderer_video_get_property), (get_size),
	(totem_cell_renderer_video_render):
	* src/totem-cell-renderer-video.h:
	* src/totem-video-list.c: (totem_video_list_get_property): Render
	a placeholder image instead of a video thumbnail in
	TotemCellRendererVideo if a thumbnail isn't available, and enable
	this for YouTube, Tracker and MythTV plugins. (Closes: #499407)

2007-11-25  Philip Withnall  <pwithnall@svn.gnome.org>

	* data/Makefile.am:
	* data/video-list.ui:
	* src/totem-video-list.c: (totem_video_list_new),
	(totem_video_list_init), (totem_video_list_dispose),
	(show_popup_menu), (button_pressed_cb), (popup_menu_cb),
	(add_to_playlist_action_callback), (copy_location_action_callback):
	Add a context menu to TotemVideoList with entries to add to playlist
	and copy the MRL. Also allow multiple-row selection. (Closes: #499159)

2007-11-25  James Livingston  <doclivingston@gmail.com>

	* src/plugins/tracker/totem-tracker-widget.c: (search_results_cb),
	(do_search): use an asynchronous call to Tracker, so it doesn't block
	the UI. (Closes: #499490)

2007-11-25  Bastien Nocera  <hadess@hadess.net>
